--- a/description.html
+++ b/description.html
@@ -34,7 +34,7 @@
 
     <section>
 		<h2>Pourquoi le Piano ? </h2>
-          <p><h3><a href="https://youtu.be/WSzclW-WWwo">Cliquez ici</a></h3>pour savoir</p>
+          <p><strong><a href="https://youtu.be/WSzclW-WWwo">Cliquez ici</a></strong>pour connaître les raisons</p>
 	</section>
 	
 	<section>
